--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,17 @@
-*{
+:root {
+  --baseColor: #09250c;
+  --secondaryColor: #ff9a17;
+  --whiteColor: #ffffff;
+  --blackColor: #000000;
+}
+
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
+
 html, body {
-  height: 100vh;
   width: 100%;
+  height: 100vh;
 }
