--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 :root {
-  --baseColor: #09250c;
-  --secondaryColor: #ff9a17;
+  --baseColor: #030027;
+  --secondaryColor: #151e3f;
   --whiteColor: #ffffff;
   --blackColor: #000000;
   --borderColor: #cccccc;
