--- a/src/components/CustomButton/Styles.css
+++ b/src/components/CustomButton/Styles.css
@@ -1,12 +1,15 @@
 .customButtonBaseContainer {
-    padding: 8px 12px;
-    border-radius: 25px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 12px;
-  }
-  
-  .customButtonBaseContainer:hover {
-    cursor: pointer;
-  }
+  padding: 8px 12px;
+  border-radius: 25px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 12px;
+  transition: 0.5s ease-in-out;
+}
+
+.customButtonBaseContainer:hover {
+  cursor: pointer;
+  background-color: var(--secondaryColor) !important;
+  color: var(--baseColor) !important;
+}
