--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
   --secondaryColor: #ddba87;
   --whiteColor: #ffffff;
   --blackColor: #000000;
+  --blackColorDim: #00000033;
   --borderColor: #cccccc;
   --disableColor: #f0f0f0;
 }
