--- a/src/components/CustomNavBar/styles.css
+++ b/src/components/CustomNavBar/styles.css
@@ -2,6 +2,12 @@
   width: 100%;
   padding: 20px 40px;
   display: flex;
+  align-items: center;
+  gap: 5px;
+}
+.threeLineIcon{
+  display: none;
+  color: var(--whiteColor);
 }
 
 .customNavbarLogoContainer {
@@ -61,3 +67,43 @@
   display: flex;
   gap: 10px;
 }
+
+  /* Tablet Device */
+  @media (max-width: 1024px) {
+    .customNavbarLinkContainer {
+      display: none;
+    }
+    .threeLineIcon{
+      display: flex;  
+    }
+    .customNavbarProfileButtonContainer{
+      display: none;
+    }
+    .customSideNavbarBaseContainer{
+      display: flex;
+      position: absolute;
+      /* opacity: 0; */
+      top: 12%;
+      bottom: 0%;
+      left: 0%;
+      right: 0%;
+      background-color: var(--blackColorDim);
+      backdrop-filter: blur(20px);
+    }
+    .customSideNavbarLinks{
+      width: 65%;
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+      align-items: center;
+      background-color: var(--whiteColor);
+    }
+  }
+  /* Standard Mobile */
+  @media (max-width: 768px) {
+    
+  }
+  /* Small Device */
+  @media (max-width: 480px) {
+  }
