--- a/src/Pages/LandingPage/styles.css
+++ b/src/Pages/LandingPage/styles.css
@@ -1,13 +1,13 @@
-.homePageBaseContainer{
+.loginPageBaseContainer{
     width: 100%;
     height: 100vh;
     display: flex;
     flex-direction: column;
     background-color: var(--baseColor);
 }
-.homePageNavbarContainer{
+.loginPageNavbarContainer{
 }
-.homePageRouteContainer{
+.loginPageRouteContainer{
     flex: 1;
     background-color: rgb(100, 100, 194);
 }
