--- a/src/Pages/LandingPage/styles.css
+++ b/src/Pages/LandingPage/styles.css
@@ -1,13 +1,15 @@
-.loginPageBaseContainer{
+.landingPageBaseContainer{
     width: 100%;
     height: 100vh;
     display: flex;
+    overflow: hidden;
     flex-direction: column;
-    background-color: var(--baseColor);
 }
-.loginPageNavbarContainer{
+.landingPageNavbarContainer{
 }
-.loginPageRouteContainer{
-    flex: 1;
-    background-color: rgb(100, 100, 194);
+.landingPageRouteContainer{
+    overflow: auto;
+}
+.landingPageRouteContainer::-webkit-scrollbar{
+    display: none;
 }
