--- a/src/components/CustomNavBar/styles.css
+++ b/src/components/CustomNavBar/styles.css
@@ -4,6 +4,8 @@
   display: flex;
   align-items: center;
   gap: 5px;
+  /* position: fixed; */
+  background-color: var(--baseColor);
 }
 .threeLineIcon{
   display: none;
