--- a/src/Pages/LandingPage/Pages/HomePage/styles.css
+++ b/src/Pages/LandingPage/Pages/HomePage/styles.css
@@ -6,23 +6,47 @@
 }
 .popularDestinationBaseContainer {
   width: 100%;
-  height: 100vh;
+  height: 90vh;
+  display: flex;
+  flex-direction: column;
   background-color: var(--baseColor);
 }
 .popularDestinationCardContainer{
+  flex: 1;
   display: flex;
   align-items: center;
-  gap: 20px;
+  justify-content: space-evenly;
+  padding: 90px 50px;
+  gap: 60px;
+}
+.popularDestinationCardContainer :hover{
+  transform: scale(1.05);
 }
 .popularDestinationCardImage{
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
   border-radius: 10px;
   overflow: hidden;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
+.popularDestinationImageContainer{
+  flex: 1;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+/* .popularDestinationImageContainer :hover{
+  transform: none;
+} */
 .popularDestinationCardInfo{
+  padding: 20px 10px;
   background-color: var(--whiteColor);
 }
-
+.popularDestinationCardInfo :hover{
+  transform: none;
+}
 
 
 
@@ -30,7 +54,7 @@
 
 .offersBaseContainer {
   width: 100%;
-  height: 100vh;
+  height: 90vh;
   background-color: var(--borderColor);
 }
 
@@ -39,6 +63,6 @@
 
 .testimonialsBaseContainer {
   width: 100%;
-  height: 100vh;
+  height: 90vh;
   background-color: var(--baseColor);
 }
