--- a/src/Pages/LandingPage/Pages/HomePage/styles.css
+++ b/src/Pages/LandingPage/Pages/HomePage/styles.css
@@ -19,9 +19,6 @@
   padding: 90px 50px;
   gap: 60px;
 }
-.popularDestinationCardContainer :hover{
-  transform: scale(1.05);
-}
 .popularDestinationCardImage{
   flex: 1;
   display: flex;
@@ -30,6 +27,10 @@
   border-radius: 10px;
   overflow: hidden;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  transition: 0.4s ease-in-out;
+}
+.popularDestinationCardImage:hover{
+  transform: scale(1.05);
 }
 .popularDestinationImageContainer{
   flex: 1;
@@ -37,15 +38,10 @@
   background-position: center;
   background-size: cover;
 }
-/* .popularDestinationImageContainer :hover{
-  transform: none;
-} */
+
 .popularDestinationCardInfo{
   padding: 20px 10px;
   background-color: var(--whiteColor);
-}
-.popularDestinationCardInfo :hover{
-  transform: none;
 }
 
 
@@ -55,9 +51,28 @@
 .offersBaseContainer {
   width: 100%;
   height: 90vh;
+  position: relative;
   background-color: var(--borderColor);
 }
-
+.offersSectionContainer{
+  position: absolute;
+  top: 0%;
+  bottom: 0%;
+  right: 0%;
+  left: 0%;
+  display: flex;
+  align-items: center;
+}
+.offersIconContainer{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  transition: 0.4s ease-in-out;
+}
 
 
 
