--- a/src/Pages/LandingPage/Pages/HomePage/styles.css
+++ b/src/Pages/LandingPage/Pages/HomePage/styles.css
@@ -52,7 +52,7 @@
   width: 100%;
   height: 90vh;
   position: relative;
-  background-color: var(--borderColor);
+  background-color: var(--whiteColor);
 }
 .offersSectionContainer{
   position: absolute;
@@ -60,20 +60,42 @@
   bottom: 0%;
   right: 0%;
   left: 0%;
+  padding: 0px 60px;
   display: flex;
   align-items: center;
+  justify-content: center;
+  gap: 60px;
 }
-.offersIconContainer{
+.offersContainer{
+  width: 100%;
+  height: 35%;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+  gap: 20px;
   border-radius: 10px;
   overflow: hidden;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   transition: 0.4s ease-in-out;
 }
-
+.offersContainer:hover{
+  transform: scale(1.05);
+}
+.offersIconContainer{
+  display: flex;
+  width: 90%;
+  align-items: center;
+  justify-content: space-between;
+}
+.offersIcon{
+  color: var(--baseColor);
+}
+.offersInfoContainer{
+  width: 90%;
+  display: flex;
+  flex-direction: column;
+}
 
 
 .testimonialsBaseContainer {
