--- a/src/Pages/LandingPage/Pages/ContactUsPage/styles.css
+++ b/src/Pages/LandingPage/Pages/ContactUsPage/styles.css
@@ -1,19 +1,46 @@
-.contactUsBaseContainer{
-    flex:1;
-    background-color: aqua;
+.contactUsBaseContainer{ 
+    height: 100vh;
+    width: 100%;
+    text-align: center;
 }
 
-.contactUscontainer{
-    flex:1;
-    background-color: blue;
+.contactUsContainer{
+    text-align: center;
 }
 
-.credentialsContactUscontainer{
-    flex:1;
-    background-color: yellow;
+.contactUsContainer h2{
+    padding-bottom: 60px;
 }
 
-.formContactUscontainer{
-    flex: 1;
-    background-color: sienna;
+.contactUsMainContainer{
+
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    gap: 100px;
 }
+
+ .credentialsContactUsContainer{
+    width: 40%;
+    border: round;
+    border-radius: 25px; 
+    padding: 20px 40px;
+    background-color: aliceblue;
+}
+
+.socialMediaIconsCredentialsContactUsContainer{
+    display: flex;
+    gap: 10px;
+}
+
+ .formContactUsContainer{
+    display: flex;
+    gap: 10px;
+    width: 40%;
+    border: round;
+    border-radius: 25px;
+    padding: 20px 40px;
+    background-color: aliceblue;
+    justify-content: center;
+    flex-direction: column;
+}  
