--- a/src/components/CustomFooter/styles.css
+++ b/src/components/CustomFooter/styles.css
@@ -11,7 +11,14 @@
     gap: 60px;
 }
 .customFooterSocialMediaLink{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
     flex: 1;
+}
+.customFooterSocialMediaIconsContainer{
+    display: flex;
+    gap: 20px;
 }
 .cutomFooterQuickLinksContainer{
     flex: 1;
