--- a/src/Pages/LandingPage/styles.css
+++ b/src/Pages/LandingPage/styles.css
@@ -8,6 +8,8 @@
 .landingPageNavbarContainer{
 }
 .landingPageRouteContainer{
+    flex: 1;
+    display: flex;
     overflow: auto;
 }
 .landingPageRouteContainer::-webkit-scrollbar{
