--- a/src/Pages/LandingPage/Pages/AboutUsPage/styles.css
+++ b/src/Pages/LandingPage/Pages/AboutUsPage/styles.css
@@ -62,7 +62,7 @@
     flex-direction: column;
     padding: 40px;
     gap: 20px;
-    box-shadow: 0 4px 8px rgba(112, 102, 102, 0.1);
+    box-shadow: 0 4px 8px var(--grayColor);
     transition: 0.4s ease-in-out;
     border-radius: 25px;
 }
