--- a/src/Pages/LandingPage/Pages/HomePage/styles.css
+++ b/src/Pages/LandingPage/Pages/HomePage/styles.css
@@ -2,7 +2,6 @@
   width: 100%;
   height: 90vh;
   text-align: center;
-  background-color: var(--borderColor);
 }
 .popularDestinationBaseContainer {
   width: 100%;
@@ -31,6 +30,7 @@
 }
 .popularDestinationCardImage:hover{
   transform: scale(1.05);
+  cursor: pointer;
 }
 .popularDestinationImageContainer{
   flex: 1;
@@ -52,7 +52,6 @@
   width: 100%;
   height: 90vh;
   position: relative;
-  background-color: var(--whiteColor);
 }
 .offersSectionContainer{
   position: absolute;
@@ -60,11 +59,11 @@
   bottom: 0%;
   right: 0%;
   left: 0%;
+  gap: 60px;
   padding: 0px 60px;
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 60px;
 }
 .offersContainer{
   width: 100%;
@@ -76,11 +75,12 @@
   gap: 20px;
   border-radius: 10px;
   overflow: hidden;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 5px 9px var(--borderColor);
   transition: 0.4s ease-in-out;
 }
 .offersContainer:hover{
   transform: scale(1.05);
+  cursor: pointer;
 }
 .offersIconContainer{
   display: flex;
@@ -101,5 +101,5 @@
 .testimonialsBaseContainer {
   width: 100%;
   height: 90vh;
-  background-color: var(--baseColor);
+  text-align: center;
 }
