--- a/src/components/CustomFooter/styles.css
+++ b/src/components/CustomFooter/styles.css
@@ -13,7 +13,7 @@
 .customFooterSocialMediaLink{
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 10px;
     flex: 1;
 }
 .customFooterSocialMediaIconsContainer{
@@ -22,10 +22,51 @@
 }
 .cutomFooterQuickLinksContainer{
     flex: 1;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
 }
+.customFooterQuickLinks{
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+.customFooterQuickLinks:hover{
+    cursor: pointer;
+}
+
 .customFooterServicesContainer{
     flex: 1;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+.customFooterServices{
+}
+.customFooterServices:hover{
+    cursor: pointer;
 }
 .customfooterContactUsContainer{
     flex: 1;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+.customFooterContactUs{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+.customFooterContactUsLocation{
+    display: flex;
+}
+.customFooterContactUsCall{
+    display: flex;
+    text-align: center;
+    gap: 10px;
+}
+.customFooterContactUsEmail{
+    display: flex;
+    text-align: center;
+    gap: 10px;
 }
