--- a/src/Pages/LandingPage/Pages/ContactUsPage/styles.css
+++ b/src/Pages/LandingPage/Pages/ContactUsPage/styles.css
@@ -11,6 +11,8 @@
     box-shadow: 0px 0px 10px var(--borderColor);
     display: flex;
     overflow: hidden;
+    justify-content: center;
+    align-items: center;
 }    
 
 .contactUsFormContainer{
@@ -19,7 +21,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: center; 
 }
 
 .contactUsInfoContainer{
@@ -29,18 +31,21 @@
 }
 
 .contactUsInfoDesignContainer{
+    display: flex;
     flex: 1; 
 }
 
 .contactUsInfoContainer .infoSecondDesign{
+    flex: 1;
     background-color: var(--secondaryColor);
 }
 
 .contactUsInfoCredentialsContainer{
     position: absolute;
-    left: 0%;
-    right: 0%;
-    top: 50%;
+    left: 30%;
+    right: 30%;
+    top: 40%;
     background-color: var(--baseColor);
     color: white;
+    padding: 20px;
 }
