--- a/src/Pages/LandingPage/Pages/ContactUsPage/styles.css
+++ b/src/Pages/LandingPage/Pages/ContactUsPage/styles.css
@@ -1,51 +1,59 @@
-.contactUsBaseContainer{
-    flex: 1;
-    background-color: var(--whiteColor);
-    display: flex;
-    padding: 50px;
+.contactUsBaseContainer {
+  flex: 1;
+  background-color: var(--whiteColor);
+  display: flex;
+  padding: 50px;
 }
 
-.contactUsContainer{
-    flex: 1;
-    border-radius: 15px;
-    box-shadow: 0px 0px 10px var(--borderColor);
-    display: flex;
-    overflow: hidden;
-    justify-content: center;
-    align-items: center;
-}    
-
-.contactUsFormContainer{
-    flex: 1;
-    background-color: var(--whiteColor);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center; 
+.contactUsContainer {
+  flex: 1;
+  border-radius: 15px;
+  box-shadow: 0px 0px 10px var(--borderColor);
+  display: flex;
+  overflow: hidden;
 }
 
-.contactUsInfoContainer{
-    position: relative;
-    flex: 1;
+.contactUsFormContainer {
+  flex: 1;
+  background-color: var(--whiteColor);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+
+.contactUsInfoContainer {
+  position: relative;
+  flex: 1;
+  display: flex;
+}
+
+.contactUsInfoDesignContainer {
+  display: flex;
+  flex: 2;
+}
+
+.infoSecondDesign {
+  flex: 1;
+  background-color: var(--secondaryColor);
+  display: flex;
+  align-items: flex-end;
+  gap: 10%;
+}
+
+.contactUsInfoCredentialsContainer {
+  position: absolute;
+  left: 30%;
+  right: 10%;
+  top: 50%;
+  transform: translateY(-50%);
+  background-color: var(--baseColor);
+  color: white;
+  padding: 20px;
+}
+
+.contactUsInfoCredentialsInfoContainer{
     display: flex;
-}
-
-.contactUsInfoDesignContainer{
-    display: flex;
-    flex: 1; 
-}
-
-.contactUsInfoContainer .infoSecondDesign{
-    flex: 1;
-    background-color: var(--secondaryColor);
-}
-
-.contactUsInfoCredentialsContainer{
-    position: absolute;
-    left: 30%;
-    right: 30%;
-    top: 40%;
-    background-color: var(--baseColor);
-    color: white;
-    padding: 20px;
+    background-color: aqua;
 }
