--- a/src/Pages/LandingPage/Pages/HomePage/styles.css
+++ b/src/Pages/LandingPage/Pages/HomePage/styles.css
@@ -52,6 +52,7 @@
   width: 100%;
   height: 90vh;
   position: relative;
+  backdrop-filter: blur(4px);
 }
 .offersSectionContainer{
   position: absolute;
@@ -75,6 +76,7 @@
   gap: 20px;
   border-radius: 10px;
   overflow: hidden;
+  background-color: var(--whiteColor);
   box-shadow: 0 5px 9px var(--borderColor);
   transition: 0.4s ease-in-out;
 }
@@ -101,5 +103,6 @@
 .testimonialsBaseContainer {
   width: 100%;
   height: 90vh;
+  background-color: white;
   text-align: center;
 }
