--- a/src/Pages/LandingPage/Pages/ServicesPage/Pages/BaggageTracking/styles.css
+++ b/src/Pages/LandingPage/Pages/ServicesPage/Pages/BaggageTracking/styles.css
@@ -1,19 +1,25 @@
 .baggageTrackingBaseContainer{
-    width: 100%;
+    display: flex;
+    flex-direction: column;
+    flex: 1;
 }
 .baggageTrackingBaseContainer, h2, p{
     text-align: center;
     padding: 5px;
 }
 .baggageTrackingInputBaseContainer{
-    width: 100%;
     display: flex;
     align-items: center;
+    justify-content: center;
+    overflow: hidden;
+    padding: 10px;
     background-color: aqua;
 }
-.baggageTrackingInputContainer{
-    width: 70%;
-    border-radius: 30px;
-    box-shadow: 0px 0px 10px #DDD ;
-    overflow: hidden;
+
+.baggageTrackingInputContainer {
+    width: 50%;
+    background-color: aquamarine;
+}
+.baggageTrackingInformationBaseContainer{
+    flex: 4;
 }
