--- a/src/Pages/LandingPage/Pages/ServicesPage/Pages/FlightBooking/styles.css
+++ b/src/Pages/LandingPage/Pages/ServicesPage/Pages/FlightBooking/styles.css
@@ -45,6 +45,7 @@
 .flightBookingInformationDetailsBaseContainer{
     display: grid;
     justify-items: start;
-    grid-template-columns: repeat(4, 1fr);
+    align-items: center;
+    grid-template-columns: repeat(5, 1fr);
     border-bottom: 1px solid var(--grayColor);
 }
