--- a/src/Pages/LandingPage/Pages/ServicesPage/Pages/BaggageTracking/styles.css
+++ b/src/Pages/LandingPage/Pages/ServicesPage/Pages/BaggageTracking/styles.css
@@ -9,17 +9,34 @@
 }
 .baggageTrackingInputBaseContainer{
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     overflow: hidden;
-    padding: 10px;
-    background-color: aqua;
+    padding: 30px;
 }
-
 .baggageTrackingInputContainer {
-    width: 50%;
-    background-color: aquamarine;
+    width: 40%;
+    display: flex;
+    justify-content: space-evenly;
+    gap: 20px;
+    padding: 20px;
+    border-radius: 30px;
+    box-shadow: 0px 0px 10px #DDD ;
 }
 .baggageTrackingInformationBaseContainer{
-    flex: 4;
+    width: 100%;
+    padding-top: 25px;
+}
+.baggageTrackingInformationContainer{
+    display: grid;
+    justify-items: start;
+    grid-template-columns: repeat(5, 1fr);
+    padding: 20px 0px;
+    padding-top: 30px;
+}
+.baggageTrackingInformationItemContainer{
+    display: grid;
+    justify-items: start;
+    grid-template-columns: repeat(5, 1fr);
 }
