--- a/src/Pages/LandingPage/Pages/ServicesPage/Pages/FlightBooking/styles.css
+++ b/src/Pages/LandingPage/Pages/ServicesPage/Pages/FlightBooking/styles.css
@@ -1,51 +1,58 @@
-.flightBookingBaseContainer{
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
+.flightBookingBaseContainer {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
 
-.flightBookingSetRouteBaseContainer{
-    flex: 1;
-    border-radius: 30px;
-    box-shadow: 0px 0px 10px #DDD ;
-    overflow: hidden;
+.flightBookingSetRouteBaseContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-bottom: 20px;
+  border-radius: 30px;
+  box-shadow: 0px 0px 10px #ddd;
+  overflow: hidden;
 }
-.flightBookingSetRouteDetailsBaseContianer{
-    width: 100%;
-    display: flex;
-    padding: 20px;
-    gap: 40px;
+.flightBookingSetRouteDetailsBaseContianer {
+  width: 100%;
+  display: flex;
+  padding: 20px;
+  gap: 40px;
 }
-.flightBookingSetRouteInputBaseContainer{
-    display: flex;
-    gap: 20px;
-    padding: 15px;
+.flightBookingSetRouteInputBaseContainer {
+  display: flex;
+  width: 50%;
+  gap: 20px;
+  padding-bottom: 15px;
 }
-.flightBookingSetRouteInputOne{
-    flex: 1;
-    display: flex;
-    gap: 5px;
-    align-items: center;
+.flightBookingSetRouteInputOne {
+  /* flex: 1; */
+  /* width: 100%; */
+  display: flex;
+  gap: 5px;
+  align-items: center;
 }
-.flightBookingSetRouteInputTwo{
-    flex: 1;
-    display: flex;
-    gap: 10px;
-    align-items: center;
+.flightBookingSetRouteInputTwo {
+  flex: 1;
+  display: flex;
+  gap: 10px;
+  align-items: center;
 }
-
-.flightBookingInformationBaseContainer{
-    flex: 3;
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    padding: 10px;
+.flightBookingSetRouteSubmitButtonContainer {
+  width: 30%;
 }
-.flightBookingInformationDetailsBaseContainer{
-    display: grid;
-    justify-items: start;
-    align-items: center;
-    grid-template-columns: repeat(5, 1fr);
-    border-bottom: 1px solid var(--grayColor);
+.flightBookingInformationBaseContainer {
+  flex: 3;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  padding: 10px;
+}
+.flightBookingInformationDetailsBaseContainer {
+  display: grid;
+  justify-items: start;
+  align-items: center;
+  grid-template-columns: repeat(5, 1fr);
+  border-bottom: 1px solid var(--grayColor);
 }
