--- a/src/Pages/LandingPage/Pages/ServicesPage/Pages/MyTrips/styles.css
+++ b/src/Pages/LandingPage/Pages/ServicesPage/Pages/MyTrips/styles.css
@@ -1,21 +1,137 @@
-.myTripsBaseContainer{
-    display: flex;
-    flex-direction: column;
-    flex: 1;
+.myTripsBaseContainer {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
 }
-.myTripHeadingContainer{
-    border-bottom: 1px solid var(--grayColor);
+.myTripHeadingContainer {
+  border-bottom: 1px solid var(--grayColor);
 }
-.myTripInformationBaseContainer{
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    padding-top: 50px;
-    background-color: aqua;
-    
+.myTripInformationBaseContainer {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 50px;
+  padding-top: 50px;
+  overflow: auto;
 }
-.myTripInformationItemBaseContainer{
-    width: 60%;
-    background-color: blue;
+.myTripInformationItemBaseContainer {
+  width: 60%;
+  border-radius: 30px;
+  box-shadow: 0px 0px 10px #ddd;
+  overflow: hidden;
+}
+.myTripInformationHeadingBaseContainer {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  padding: 10px 20px;
+  gap: 5px;
+  color: var(--whiteColor);
+  background-color: var(--baseColor);
+}
+.myTripInformationHeadingContainer {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+.myTripInformationHeading {
+}
+.myTripInformationHeadingButton {
+}
+
+.myTripInfromationMainItemBaseContainer {
+  width: 100%;
+  height: 100%;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+.myTripInformationMainItemLoctionBaseContainer {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.myTripInformationMainItemFromLocationBaseContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+.myTripInfromationMainItemFromLoactionDateTimeContainer {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+.myTripInformationMainItemLocationArrowContainer {
+}
+.mytripInformationMainItemToLocationBaseLoaction {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.myTripInformationMainItemTypeBaseContainer {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.myTripInformationMainItemTypeTerminalContianer {
+  display: flex;
+  flex-direction: column;
+}
+.myTripInformationMainItemTypeGateContianer {
+  display: flex;
+  flex-direction: column;
+}
+.myTripInformationMainItemTypeSeatContianer {
+  display: flex;
+  flex-direction: column;
+}
+.myTripInformationMainItemTypeClassContianer {
+  display: flex;
+  flex-direction: column;
+}
+
+.mytripInformationMainItemPriceBaseContainer {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #ddd;
+  border-radius: 20px;
+  padding: 10px;
+}
+.myTripInformationMainItemPricePassengersBaseContainer {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+.myTripInformationMainItemPricePassengerContainer {
+}
+.myTripInforamtionMainItemPricePriceBaseContainer {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+.myTripInformationMainItemPricePriceContainer {
+}
+.myTripInformationMainItemPriceBaggageBaseContainer {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+.myTripInformationMainItemPriceBaggageContainer {
+}
+
+.myTripsInformationMainItemModifactionButtonBaseContainer {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  gap: 10px;
 }
