--- a/src/Pages/LandingPage/Pages/ServicesPage/Pages/Support/styles.css
+++ b/src/Pages/LandingPage/Pages/ServicesPage/Pages/Support/styles.css
@@ -1,3 +1,55 @@
-.supportBaseContainer{
-    width: 100%;
+.feedbackBaseContainer {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+}
+.feedbackHeadingBaseContainer {
+}
+.feedbackFormBaseContainer {
+  width: 60%;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  padding: 20px;
+  border-radius: 30px;
+  box-shadow: 0px 0px 10px #ddd;
+  overflow: hidden;
+}
+.feedbackFormNameEmailBaseContainer {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
+}
+.feedbackFormNameBaseContainer {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+}
+.FeedbackFormEmailBaseContainer {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+}
+.feedbackFormCategoryBaseContainer {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+.feedbackFormFeedbackBaseContainer {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+.feedbackFormOverallExperienceBaseContainer {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+.feedbackFormSubmitButtonContainer {
+  width: 100%;
+  font-weight: bold;
 }
