--- a/src/Pages/LandingPage/Pages/FAQPage/styles.css
+++ b/src/Pages/LandingPage/Pages/FAQPage/styles.css
@@ -40,3 +40,9 @@
   justify-content: space-between;
   color: var(--baseColor);
 }
+.faqPageBaseContentItemQueryContainer{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  color: var(--baseColor);
+}
