--- a/src/Pages/LandingPage/Pages/FAQPage/styles.css
+++ b/src/Pages/LandingPage/Pages/FAQPage/styles.css
@@ -26,7 +26,7 @@
 
   display: flex;
   flex-direction: column;
-  gap: 40px; /* adds space between all child containers */
+  gap: 40px;
   padding: 20px;
 }
 
