--- a/src/Pages/LandingPage/Pages/HomePage/styles.css
+++ b/src/Pages/LandingPage/Pages/HomePage/styles.css
@@ -166,25 +166,30 @@
   padding: 20px;
   display: flex;
   flex-direction: column;
+  justify-content: space-around;
   border-radius: 10px;
   overflow: hidden;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 .testimonialsCardImageBaseContainer {
   display: flex;
+  align-items: center;
 }
 .testimonialsCardImageContainer {
-  width: 90px;
-  height: 83px;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  border-radius: 50px;
+  width: 50px;
+  height: 50px;
+  border-radius: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #ccc;
+  color: #fff;
+  font-size: 24px;
+  font-weight: bold;
 }
 .testimonialsCardImageTextContainer {
   padding: 10px;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
 }
