--- a/src/Pages/ProfilePage/styles.css
+++ b/src/Pages/ProfilePage/styles.css
@@ -1,1 +1,63 @@
-.profilePageBaseContainer{}
+.profilePageBaseContainer{
+    width: 100%;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+.profilePageCustomNavbarBaseContainer{
+}
+.profilePageContentContainer{
+    flex: 1;
+}
+.profilePageContentProfileBaseContainer{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    padding: 60px 150px;
+    background-color: var(--secondaryColor);
+}
+.profilePageContentIconContainer{
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--whiteColor);
+    color: var(--baseColor);
+}
+.profilePageContentNameContainer{
+
+}
+.profilePageContentTableBaseContainer{
+    width: 100%;
+    height: 100%;
+    padding: 50px;
+    display: flex;
+    justify-content: center;
+}
+.profilePageContentTableContainer{
+    width: 80%;
+    height: 80%;
+    padding: 30px;
+    display: flex;
+    flex-direction: column;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px #ddd;
+}
+.profilePageContentFormBaseContainer{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+}
+.profilePageContentFormContainer{
+    display: flex;
+    flex-direction: column;
+}
+.profilePageContentAddressContainer{
+    grid-column: 1/3;
+}
+
+.profilePageCustomFooterBaseContainer{
+}
