--- a/src/components/CustomNavBar/styles.css
+++ b/src/components/CustomNavBar/styles.css
@@ -62,6 +62,42 @@
   display: flex;
   align-items: center;
   justify-content: flex-end;
+  cursor: pointer;
+}
+.customNavbarProfile {
+  position: relative;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+.customNavbarProfileIcon {
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--secondaryColor);
+  color: var(--whiteColor);
+  font-weight: bold;
+  font-size: 18px;
+}
+.customNavbarDropdownContainer {
+  position: absolute;
+  top: 120%;
+  right: 0;
+  background: var(--whiteColor);
+  z-index: 1;
+  padding: 5px;
+  border-radius: 10px;
+  box-shadow: 0px 4px 12px #ddd;
+}
+.customNavbarDropdownProfileContainer {
+  padding: 10px 20px;
+  border-bottom: 1px solid var(--grayColor);
+}
+.customNavbarDropdownLogoutContainer{
+  padding: 10px 20px;
 }
 
 .customNavbarProfileButtonContainer {
