Profile API Done

--- a/src/Pages/ProfilePage/styles.css
+++ b/src/Pages/ProfilePage/styles.css
@@ -61,3 +61,8 @@
 
 .profilePageCustomFooterBaseContainer{
 }
+.profilePageButtonContainer{
+    display: flex;
+    align-items: center;
+    justify-content: center !important;
+}
