--- a/src/Pages/LandingPage/Pages/HomePage/styles.css
+++ b/src/Pages/LandingPage/Pages/HomePage/styles.css
@@ -32,6 +32,9 @@
 .heroSectionContainerTwoBase {
   width: 100%;
   padding: 50px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
 .popularDestinationBaseContainer {
   width: 100%;
@@ -112,7 +115,7 @@
 }
 .offersContainer {
   width: 100%;
-  height: 35%;
+  height: 30%;
   display: flex;
   flex-direction: column;
   justify-content: center;
