--- a/src/Pages/LandingPage/Pages/ServicesPage/Pages/FlightBooking/Pages/FlightBookingForm/styles.css
+++ b/src/Pages/LandingPage/Pages/ServicesPage/Pages/FlightBooking/Pages/FlightBookingForm/styles.css
@@ -13,9 +13,15 @@
     border-radius: 10px;
     box-shadow: 0px 0px 10px #ddd;
 }
+.flightBookingFormAddBaseContainer{
+    display: flex;
+    justify-content: space-between;
+}
+
 .flightBookingFormGridBaseContainer{
     display: grid;
-    grid-template-columns: repeat(4, 2fr);
+    align-items: flex-end;
+    grid-template-columns: repeat(5, 2fr);
     gap: 30px;
 }
 .flighBookingFormGrid{
