--- a/src/Pages/LandingPage/Pages/ServicesPage/Pages/MyTrips/Pages/styles.css
+++ b/src/Pages/LandingPage/Pages/ServicesPage/Pages/MyTrips/Pages/styles.css
@@ -1,37 +1,40 @@
 .view-pdf-container {
-    padding: 40px;
-    text-align: center;
-  }
-  
-  .trip-info {
-    margin-top: 20px;
-    text-align: left;
-    max-width: 500px;
-    margin-inline: auto;
-    padding: 20px;
-    border: 1px solid #ddd;
-    border-radius: 10px;
-    background-color: #fafafa;
-  }
-  
-  .trip-info p {
-    margin: 8px 0;
-    font-size: 15px;
-  }
-  
-  .download-btn {
-    display: inline-block;
-    margin-top: 30px;
-    padding: 12px 24px;
-    background-color: #007bff;
-    color: white;
-    border-radius: 6px;
-    text-decoration: none;
-    font-size: 16px;
-    transition: background-color 0.2s;
-  }
-  
-  .download-btn:hover {
-    background-color: #0056b3;
-  }
-  
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  gap: 20px;
+  text-align: center;
+
+}
+
+.trip-info {
+  margin-top: 20px;
+  text-align: left;
+  max-width: 500px;
+  margin-inline: auto;
+  padding: 20px;
+  border: 1px solid #ddd;
+  border-radius: 10px;
+  background-color: #fafafa;
+}
+
+.trip-info p {
+  margin: 8px 0;
+  font-size: 15px;
+}
+
+.download-btn {
+  display: inline-block;
+  margin-top: 30px;
+  padding: 12px 24px;
+  background-color: #007bff;
+  color: white;
+  border-radius: 6px;
+  text-decoration: none;
+  font-size: 16px;
+  transition: background-color 0.2s;
+}
+
+.download-btn:hover {
+  background-color: #0056b3;
+}
