--- a/src/Pages/LandingPage/Pages/ServicesPage/Pages/FlightBooking/Pages/CheckOut/styles.css
+++ b/src/Pages/LandingPage/Pages/ServicesPage/Pages/FlightBooking/Pages/CheckOut/styles.css
@@ -3,24 +3,27 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 5px;
 }
 .checkoutContainer {
   padding: 20px;
   display: flex;
   flex-direction: column;
   gap: 10px;
-  border-radius: 10px;
-  box-shadow: 0px 0px 10px #ddd;
 }
-.checkoutGridBaseContianer{
-    display: grid;
-    align-items: flex-end;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 30px;
+.checkoutGridBaseContianer {
+  display: grid;
+  align-items: flex-end;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 30px;
 }
-.checkoutGridContainer{
-    display: flex;
-    flex-direction: column;
-    gap: 5px;
+.checkoutGridContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+.checkoutPayButton {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
