--- a/src/components/CustomFooter/styles.css
+++ b/src/components/CustomFooter/styles.css
@@ -41,11 +41,6 @@
     flex-direction: column;
     gap: 10px;
 }
-.customFooterServices{
-}
-.customFooterServices:hover{
-    cursor: pointer;
-}
 .customfooterContactUsContainer{
     flex: 1;
     display: flex;
@@ -59,6 +54,7 @@
 }
 .customFooterContactUsLocation{
     display: flex;
+    gap: 5px;
 }
 .customFooterContactUsCall{
     display: flex;
