--- a/src/Pages/LandingPage/Pages/ServicesPage/Pages/FlightBooking/Pages/CheckOut/styles.css
+++ b/src/Pages/LandingPage/Pages/ServicesPage/Pages/FlightBooking/Pages/CheckOut/styles.css
@@ -3,13 +3,15 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  gap: 5px;
+  gap: 20px;
 }
 .checkoutContainer {
   padding: 20px;
   display: flex;
   flex-direction: column;
   gap: 10px;
+  border-radius: 20px;
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
 }
 .checkoutGridBaseContianer {
   display: grid;
