--- a/src/Pages/LandingPage/Pages/ServicesPage/Pages/FlightBooking/Pages/CheckOut/styles.css
+++ b/src/Pages/LandingPage/Pages/ServicesPage/Pages/FlightBooking/Pages/CheckOut/styles.css
@@ -1,6 +1,5 @@
 .checkoutBaseContainer {
   width: 100%;
-  height: 100%;
   display: flex;
   flex-direction: column;
   gap: 20px;
@@ -13,7 +12,7 @@
   border-radius: 20px;
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
 }
-.checkoutGridBaseContianer {
+.checkoutGridBaseContainer {
   display: grid;
   align-items: flex-end;
   grid-template-columns: repeat(2, 1fr);
@@ -25,7 +24,7 @@
   gap: 5px;
 }
 .checkoutPayButton {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  width: 100%;
+  font-weight: bold;
+  padding: 25px 70vh 0px 70vh;
 }
