--- a/src/Pages/LandingPage/Pages/ServicesPage/Pages/FlightBooking/Pages/FlightBookingForm/styles.css
+++ b/src/Pages/LandingPage/Pages/ServicesPage/Pages/FlightBooking/Pages/FlightBookingForm/styles.css
@@ -28,3 +28,8 @@
     flex-direction: column;
     gap: 5px;
 }
+.flightBookingFormButtonContainer{
+    width: 100%;
+    font-weight: bold;
+    padding: 20px 70vh;
+}
