cancel ticket done

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,8 @@
   --disableColor: #f0f0f0;
   --grayColor: #999999;
   --footerColor: #111929;
+  --redColor: #dd2624;
+  --greenColor: #2a985f;
 }
 
 * {
