--- a/src/Pages/LandingPage/Pages/ServicesPage/Pages/MyTrips/styles.css
+++ b/src/Pages/LandingPage/Pages/ServicesPage/Pages/MyTrips/styles.css
@@ -18,6 +18,7 @@
 }
 .myTripInformationItemBaseContainer {
   width: 60%;
+  margin-bottom: 15px;
   border-radius: 30px;
   box-shadow: 0px 0px 10px #ddd;
   overflow: hidden;
